# nba-transactions-scraper

./: .gitignore  README.md  setup.cfg
nba_transactions_scraper/: requirements.txt
src/nba_transactions_scraper/: __init__.py
transactions/: main.py
