[metadata]
name = nba_transactions_scraper
version = 0.0.4
author = Dominic Ridley
author_email = dominicsridley@gmail.com
description = A package for scraping NBA trades and transactions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seleanridley/nba-transactions-scraper
project_urls =
    Bug Tracker = https://github.com/seleanridley/nba-transactions-scraper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    beautifulsoup4
    flask
    flask-restful
    pandas
    requests
    nba_api


[options.packages.find]
where = src